uemu: tests: Add RV64UF and RV64UD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ function(build_asm asm_path out_path target_name)
                 -T${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/env/p/link.ld
                 -I${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/env/p
                 -I${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/isa/macros/scalar
-                -nostdlib -ffreestanding -march=rv64ima_zicsr_zifencei -g -mabi=lp64 -nostartfiles -O0
+                -nostdlib -ffreestanding -march=rv64g -g -mabi=lp64 -nostartfiles -O0
                 -o ${temp_elf}
                 ${file}
             DEPENDS ${file}
@@ -157,6 +157,14 @@ build_asm("${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/isa/rv64ua/*.S"
           "${CMAKE_BINARY_DIR}/testbins/rv64ua"
           "riscv_tests_rv64ua")
 
+build_asm("${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/isa/rv64uf/*.S"
+          "${CMAKE_BINARY_DIR}/testbins/rv64uf"
+          "riscv_tests_rv64uf")
+
+build_asm("${CMAKE_SOURCE_DIR}/thirdparty/riscv-tests/isa/rv64ud/*.S"
+          "${CMAKE_BINARY_DIR}/testbins/rv64ud"
+          "riscv_tests_rv64ud")
+
 # --- Google Test Integration ---
 enable_testing()
 include(FetchContent)
@@ -187,4 +195,4 @@ include(GoogleTest)
 gtest_discover_tests(run_tests)
 
 # Make tests depend on RISC-V test binaries and SoftFloat
-add_dependencies(run_tests riscv_tests_rv64mi riscv_tests_rv64si riscv_tests_rv64ui riscv_tests_rv64um riscv_tests_rv64ua softfloat_build)
+add_dependencies(run_tests riscv_tests_rv64mi riscv_tests_rv64si riscv_tests_rv64ui riscv_tests_rv64um riscv_tests_rv64ua riscv_tests_rv64ud riscv_tests_rv64uf softfloat_build)
