--- a/devicetree/uemu.dts
+++ b/devicetree/uemu.dts
@@ -46,7 +46,7 @@
             reg = <0x00>;
             status = "okay";
             compatible = "riscv";
-            riscv,isa = "rv64imafdcsu";
+            riscv,isa = "rv64ima";
             mmu-type = "riscv,sv39";
 
             cpu0_intc: interrupt-controller {
@@ -60,8 +60,8 @@
 
     memory@80000000 {
         device_type = "memory";
-        /* 0x8000000 = 128MB to match [0x80000000,0x87ffffff] */
-        reg = <0x0 0x80000000 0x0 0x08000000>;
+        /* 0x10000000 = 256MB to match [0x80000000,0x8fffffff] */
+        reg = <0x0 0x80000000 0x0 0x10000000>;
     };
 
     sifive_test: sifive_test@100000 {
