--- a/devicetree/uemu.dts
+++ b/devicetree/uemu.dts
@@ -46,7 +46,7 @@
             reg = <0x00>;
             status = "okay";
             compatible = "riscv";
-            riscv,isa = "rv64ima";
+            riscv,isa = "rv64imasu";
             mmu-type = "riscv,sv39";
 
             cpu0_intc: interrupt-controller {
@@ -93,33 +93,26 @@
         plic0: interrupt-controller@c000000 {
             phandle = <0x03>;
             riscv,ndev = <0x35>;
-            /* base 0x0c000000, size 0x0400_000 */
-            reg = <0x0 0x0c000000 0x0 0x04000000>;
+            reg = <0x00 0xc000000 0x00 0x4000000>;
             interrupts-extended = <&cpu0_intc 0x0b &cpu0_intc 0x09>;
             interrupt-controller;
+            compatible = "riscv,plic0";
             #interrupt-cells = <0x01>;
             #address-cells = <0x00>;
         };
 
         clint@2000000 {
-            /* CLINT at 0x0200_0000, size 0x10000 */
-            reg = <0x0 0x02000000 0x0 0x00010000>;
             interrupts-extended = <&cpu0_intc 0x03 &cpu0_intc 0x07>;
+            reg = <0x00 0x2000000 0x00 0x10000>;
             compatible = "riscv,clint0";
         };
 
-        rtc@10000100 {
-            compatible = "aspeed,rtc";
-            reg = <0x0 0x10000100 0x0 0x00000100>;
-        };
-
         uart@10000000 {
-            compatible = "ns16550a";
-            reg = <0x0 0x10000000 0x0 0x100>;
-            clock-frequency = <0x384000>;
-            /* UART_IRQ = 10 */
-            interrupts = <0x0a>;
+            interrupts = <0xa>;
             interrupt-parent = <&plic0>;
+            clock-frequency = <0x384000>;
+            reg = <0x0 0x10000000 0x0 0x100>;
+            compatible = "ns16550a";
         };
     };
 };
