uemu: Add linux build guide

--- a/software/uemu_defconfig
+++ b/software/uemu_defconfig
@@ -15,6 +15,7 @@ CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_INITRAMFS_SOURCE="/path/to/rootfs.cpio"
 CONFIG_EXPERT=y
 CONFIG_ERRATA_SIFIVE=y
 CONFIG_NONPORTABLE=y
