uemu: tests: Add riscv-tests for rv64uf and rv64ud

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ function(build_asm asm_path out_path target_name)
                 -T${CMAKE_SOURCE_DIR}/riscv-tests/env/v/link.ld
                 -I${CMAKE_SOURCE_DIR}/riscv-tests/env/v
                 -I${CMAKE_SOURCE_DIR}/riscv-tests/isa/macros/scalar
-                -nostdlib -ffreestanding -march=rv64ima_zicsr_zifencei -g -mabi=lp64 -nostartfiles -O0
+                -nostdlib -ffreestanding -march=rv64g_zicsr_zifencei -g -mabi=lp64 -nostartfiles -O0
                 -o ${temp_elf}
                 ${file}
             DEPENDS ${file}
@@ -178,6 +178,14 @@ build_asm("${CMAKE_SOURCE_DIR}/riscv-tests/isa/rv64ua/*.S"
           "${CMAKE_BINARY_DIR}/testbins/rv64ua"
           "riscv_tests_rv64ua")
 
+build_asm("${CMAKE_SOURCE_DIR}/riscv-tests/isa/rv64uf/*.S"
+          "${CMAKE_BINARY_DIR}/testbins/rv64uf"
+          "riscv_tests_rv64uf")
+
+build_asm("${CMAKE_SOURCE_DIR}/riscv-tests/isa/rv64ud/*.S"
+          "${CMAKE_BINARY_DIR}/testbins/rv64ud"
+          "riscv_tests_rv64ud")
+
 # --- Google Test Integration ---
 enable_testing()
 include(FetchContent)
@@ -206,4 +214,6 @@ add_dependencies(run_tests
   riscv_tests_rv64ui
   riscv_tests_rv64ua
   riscv_tests_rv64um
+  riscv_tests_rv64uf
+  riscv_tests_rv64ud
 )
