--- a/software/uemu.dts
+++ b/software/uemu.dts
@@ -46,7 +46,7 @@
             reg = <0x00>;
             status = "okay";
             compatible = "riscv";
-            riscv,isa = "rv64imafdsu";
+            riscv,isa = "rv64imafdcsu";
             mmu-type = "riscv,sv39";
 
             cpu0_intc: interrupt-controller {
