--- a/software/uemu_defconfig
+++ b/software/uemu_defconfig
@@ -1,28 +1,30 @@
-CONFIG_COMPILE_TEST=y
-# CONFIG_WERROR is not set
+CONFIG_LOCALVERSION="-uemu"
 CONFIG_SYSVIPC=y
-CONFIG_NO_HZ_IDLE=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
-# CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
+CONFIG_PREEMPT_VOLUNTARY=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
+CONFIG_MEMCG=y
+CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
-CONFIG_CGROUP_BPF=y
+CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CGROUP_CPUACCT=y
 CONFIG_NAMESPACES=y
-CONFIG_USER_NS=y
-CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="/path/to/rootfs.cpio"
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_EXPERT=y
-CONFIG_ERRATA_SIFIVE=y
 CONFIG_NONPORTABLE=y
-# CONFIG_RISCV_ISA_C is not set
+CONFIG_SMP=y
+CONFIG_NR_CPUS=2
 # CONFIG_RISCV_ISA_SUPM is not set
 # CONFIG_RISCV_ISA_SVNAPOT is not set
 # CONFIG_RISCV_ISA_SVPBMT is not set
+# CONFIG_RISCV_ISA_V is not set
 # CONFIG_RISCV_ISA_ZAWRS is not set
 # CONFIG_RISCV_ISA_ZABHA is not set
 # CONFIG_RISCV_ISA_ZACAS is not set
@@ -33,77 +35,59 @@ CONFIG_NONPORTABLE=y
 # CONFIG_RISCV_ISA_ZICBOM is not set
 # CONFIG_RISCV_ISA_ZICBOZ is not set
 # CONFIG_RISCV_ISA_ZICBOP is not set
-# CONFIG_FPU is not set
+CONFIG_HZ_100=y
 CONFIG_RISCV_SBI_V01=y
-# CONFIG_EFI is not set
-CONFIG_JUMP_LABEL=y
-# CONFIG_COMPAT_32BIT_TIME is not set
-# CONFIG_GCC_PLUGINS is not set
-# CONFIG_BLOCK is not set
-CONFIG_PAGE_REPORTING=y
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_PARTITION_ADVANCED=y
+CONFIG_NET=y
+CONFIG_PACKET=y
+CONFIG_UNIX=y
+CONFIG_INET=y
+CONFIG_IP_MULTICAST=y
+CONFIG_IP_ADVANCED_ROUTER=y
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+CONFIG_NETFILTER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_VIRTIO_BLK=y
+CONFIG_SCSI=y
+CONFIG_BLK_DEV_SD=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GOLDFISH_EVENTS=y
-# CONFIG_INPUT_MOUSE is not set
-CONFIG_INPUT_MISC=y
-CONFIG_INPUT_UINPUT=y
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_RUNTIME_UARTS=1
+CONFIG_SERIAL_8250_EXTENDED=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
-CONFIG_SERIAL_SIFIVE=y
-CONFIG_SERIAL_SIFIVE_CONSOLE=y
-CONFIG_GOLDFISH_TTY=y
-CONFIG_VIRTIO_CONSOLE=y
 CONFIG_HW_RANDOM_VIRTIO=y
-CONFIG_I2C=y
-# CONFIG_I2C_HELPER_AUTO is not set
-CONFIG_POWER_RESET=y
-CONFIG_POWER_RESET_SYSCON=y
-CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_BATTERY_GOLDFISH=y
-# CONFIG_HWMON is not set
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
-# CONFIG_USB_SUPPORT is not set
 CONFIG_RTC_CLASS=y
-CONFIG_RTC_DRV_GENERIC=y
 CONFIG_RTC_DRV_GOLDFISH=y
-CONFIG_SYNC_FILE=y
-# CONFIG_VIRTIO_MENU is not set
-# CONFIG_VHOST_MENU is not set
+CONFIG_VIRTIO_MMIO=y
+CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
 CONFIG_GOLDFISH=y
-CONFIG_GOLDFISH_PIPE=y
-# CONFIG_IOMMU_SUPPORT is not set
-CONFIG_RPMSG_VIRTIO=y
-CONFIG_RESET_SIMPLE=y
-CONFIG_AUTOFS_FS=y
+CONFIG_EXT4_FS=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+CONFIG_FUSE_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
-CONFIG_NLS=y
-CONFIG_NLS_CODEPAGE_437=y
-CONFIG_NLS_ISO8859_1=y
 CONFIG_KEYS=y
-CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,bpf"
-CONFIG_INIT_STACK_NONE=y
+CONFIG_SECURITY=y
+CONFIG_SECURITYFS=y
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_PRINTK_TIME=y
-# CONFIG_DEBUG_MISC is not set
-CONFIG_DEBUG_FS=y
-CONFIG_SOFTLOCKUP_DETECTOR=y
-CONFIG_WQ_WATCHDOG=y
-CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_MUTEXES=y
-CONFIG_DEBUG_RWSEMS=y
-CONFIG_DEBUG_ATOMIC_SLEEP=y
-CONFIG_DEBUG_LIST=y
-CONFIG_DEBUG_PLIST=y
-CONFIG_DEBUG_SG=y
-CONFIG_RCU_EQS_DEBUG=y
-# CONFIG_FTRACE is not set
-# CONFIG_RUNTIME_TESTING_MENU is not set
+CONFIG_MAGIC_SYSRQ=y
