uemu: software: Bring back missing support for sifive test

--- a/software/uemu_defconfig
+++ b/software/uemu_defconfig
@@ -62,6 +62,9 @@ CONFIG_SERIAL_8250_EXTENDED=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
 CONFIG_HW_RANDOM_VIRTIO=y
+CONFIG_POWER_RESET=y
+CONFIG_POWER_RESET_SYSCON=y
+CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_BATTERY_GOLDFISH=y
 CONFIG_FB=y
@@ -89,5 +92,6 @@ CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
+CONFIG_CRYPTO_DEV_VIRTIO=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
