uemu: software,verif: Describe the isa more accurately

--- a/software/uemu.dts
+++ b/software/uemu.dts
@@ -46,7 +46,9 @@
             reg = <0x00>;
             status = "okay";
             compatible = "riscv";
-            riscv,isa = "rv64imafdcsu";
+            riscv,isa-extensions = "i", "m", "a", "f", "d", "c", "zicntr", "zicsr", "zifencei", "zca", "zcd", "sstc", "svadu";
+            riscv,isa-base = "rv64i";
+            riscv,isa = "rv64imafdc_zicntr_zicsr_zifencei_zca_zcd_sstc_svadu";
             mmu-type = "riscv,sv39";
 
             cpu0_intc: interrupt-controller {
